--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -10,7 +10,7 @@ $line-height-base: 1.6;
 $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
-$pink: #f66d9b;
+$pink: #fd9c9c;
 $red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
