--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,11 @@
 // Bootstrap
 //@import '~bootstrap/scss/bootstrap';
 
+.tile.is-pink {
+    background: #a4e86f;
+}
+
+
 //Bulma
 @import '~bulma/css/bulma.css';
 
