Added Screenscrping article

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -323,7 +323,6 @@ html {
   -webkit-text-size-adjust: 100%;
      -moz-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
-          text-size-adjust: 100%;
 }
 
 article,
@@ -347,7 +346,7 @@ textarea {
 code,
 pre {
   -moz-osx-font-smoothing: auto;
-  -webkit-font-smoothing: auto;
+  -webkit-font-smoothing: inherit;
   font-family: monospace;
 }
 
@@ -11407,3 +11406,8 @@ http://zenorocha.mit-license.org
   background: #a4e86f;
 }
 
+.is-horizontal-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
